src/test/ui/pattern/usefulness/deny-irrefutable-let-patterns.stderr
error: irrefutable `if let` pattern
  --> $DIR/deny-irrefutable-let-patterns.rs:7:8
   |
LL |     if let _ = 5 {}
   |        ^^^^^^^^^ this pattern will always match, so the `if let` is useless
   |
note: the lint level is defined here
  --> $DIR/deny-irrefutable-let-patterns.rs:4:9
   |
LL | #![deny(irrefutable_let_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^
   = help: consider replacing the `if let` with a `let`
   = help: for more information, visit <https://doc.rust-lang.org/book/ch18-02-refutability.html>

error: irrefutable `while let` pattern
  --> $DIR/deny-irrefutable-let-patterns.rs:9:11
   |
LL |     while let _ = 5 {
   |           ^^^^^^^^^ this pattern will always match, so the loop will never exit
   |
   = help: consider instead using a `loop { ... }` with a `let` inside it
   = help: for more information, visit <https://doc.rust-lang.org/book/ch18-02-refutability.html>

error: irrefutable `if let` guard pattern
  --> $DIR/deny-irrefutable-let-patterns.rs:14:14
   |
LL |         _ if let _ = 2 => {}
   |              ^^^^^^^^^ this pattern will always match, so the guard is useless
   |
   = help: consider removing the guard and adding a `let` inside the match arm
   = help: for more information, visit <https://doc.rust-lang.org/book/ch18-02-refutability.html>

error: aborting due to 3 previous errors

